--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -7,7 +7,7 @@
     --light-border-color        : #dcdcdc;
 
     /* dark theme colors */
-    --dark-background          : #292a2d;
+    --dark-background          : #343434;
     --dark-background-secondary: #3b3d42;
     --dark-color               : #a9a9b3;
     --dark-color-secondary     : #73747b;
