--- a/src/styles/menu.module.css
+++ b/src/styles/menu.module.css
@@ -23,7 +23,7 @@
     margin         : 0 auto;
     padding        : 0 15px;
     list-style     : none;
-    border-right   : 1px solid;
+    /* border-right   : 1px solid; */
     margin-right   : 18px;
 
     li {
