--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -30,28 +30,22 @@ body {
         background: linear-gradient(rgba(130, 46, 96, 0.49) 0%, rgba(0, 0, 0, 0) 100%);
         background-color: #292a2d;
         color: var(--dark-color);
-
-        .sexy-card {box-shadow: inset -11px 15px 30px 7px hsla(0,0%,100%,.25), 0 0 20px 0px rgba(160,137,137,.22);}
     }
 }
-
-
 
 h1,h2,h3,h4,h5,h6 {display: flex; align-items: center;line-height: 1.3;}
 h1 {font-size: 2.625rem;}
 h2 {font-size: 1.625rem;}
 h3 {font-size: 1.375rem;}
 h4 {font-size: 1.125rem;}
+a {color: inherit;}
 
 @media (--phone) {
     h1 {font-size: 2rem;}
-
     h2 {font-size: 1.4rem;}
     h3 {font-size: 1.15rem;}
     h4 {font-size: 1.125rem;}
 }
-
-a {color: inherit;}
 
 img {
     display  : block;
@@ -65,253 +59,140 @@ figure {
     display  : table;
     max-width: 100%;
     margin   : 25px 0;
-
-    &.left {
-        margin-right: auto;
-    }
-
-    &.center {
-        margin-left : auto;
-        margin-right: auto;
-    }
-
-    &.right {
-        margin-left: auto;
-    }
+    &.left {margin-right: auto;}
+    &.center {margin-left : auto;margin-right: auto;}
+    &.right {margin-left: auto;}
 
     figcaption {
         font-size : 14px;
         margin-top: 5px;
         opacity   : .8;
-
-        &.left {
-            text-align: left;
-        }
-
-        &.center {
-            text-align: center;
-        }
-
-        &.right {
-            text-align: right;
-        }
+        &.left {text-align: left;}
+        &.center {text-align: center;}
+        &.right {text-align: right;}
     }
 }
 
 code {
-    font-family          : Consolas, Monaco, Andale Mono, Ubuntu Mono, monospace;
+    font-family: Consolas, Monaco, Andale Mono, Ubuntu Mono, monospace;
     font-feature-settings: normal;
-    font-weight          : normal;
-    background           : var(--light-background-secondary);
-    padding              : 1px 6px;
-    margin               : 0 2px;
-    border-radius        : 5px;
-    font-size            : .9rem;
+    font-weight: normal;
+    background: var(--light-background-secondary);
+    padding: 1px 6px;
+    margin: 0 2px;
+    border-radius: 5px;
+    font-size: .9rem;
 
-    .dark & {
-        background: var(--dark-background-secondary);
-    }
+    .dark & {background: var(--dark-background-secondary);}
 }
 
 pre {
-    background   : #1a1a1d;
-    padding      : 20px;
+    background: #1a1a1d;
+    padding: 20px;
     border-radius: 8px;
-    font-size    : .9rem;
-    overflow     : auto;
-
-    @media (--phone) {
-        white-space: pre-wrap;
-        word-wrap  : break-word;
-    }
-
-    code {
-        background: none !important;
-        color     : #ccc;
-        margin    : 0;
-        padding   : 0;
-        font-size : .9rem;
-    }
+    font-size: .9rem;
+    overflow: auto;
+    @media (--phone) {white-space: pre-wrap;word-wrap  : break-word;}
+    code {background: none !important;color: #ccc;margin: 0;padding: 0;font-size: .9rem;}
 }
 
 blockquote {
     border-left: 2px solid;
-    margin     : 40px;
-    padding    : 10px 20px;
-
-    @media (--phone) {
-        margin : 10px;
-        padding: 10px;
-    }
-
-    p:first-of-type {
-        margin-top: 0;
-    }
-
-    p:last-of-type {
-        margin-bottom: 0;
-    }
+    margin: 40px;
+    padding: 10px 20px;
+    @media (--phone) {margin : 10px;padding: 10px;}
+    p:first-of-type {margin-top: 0;}
+    p:last-of-type {margin-bottom: 0;}
 }
 
-table {
-    table-layout   : fixed;
-    border-collapse: collapse;
-    width          : 100%;
-    margin         : 40px 0;
-    border-radius  : 5px;
-}
+table {table-layout: fixed;border-collapse: collapse;width: 100%;margin: 40px 0;border-radius: 5px;}
 
-table,
-th,
-td {
+table,th,td {
     border : 1px solid var(--light-color);
     padding: 10px;
-
-    .dark & {
-        border-color: var(--dark-color);
-    }
+    .dark & {border-color: var(--dark-color);}
 }
 
 th {
     background: var(--light-background-secondary);
-
-    .dark & {
-        background: var(--dark-background-secondary);
-    }
+    .dark & {background: var(--dark-background-secondary);}
 }
 
-ul,
-ol {
+ul,ol {
     margin-left: 40px;
     padding    : 0;
-
-    @media (--phone) {
-        margin-left: 20px;
-    }
+    @media (--phone) {margin-left: 20px;}
 }
 
-ol ol {
-    list-style-type: lower-alpha;
-}
+ol ol {list-style-type: lower-alpha;}
 
-button,
-input,
-textarea {
+button,input,textarea {
     font-family: 'Inter UI', -apple-system, BlinkMacSystemFont, "Roboto", "Segoe UI", Helvetica, Arial, sans-serif;
 }
 
 .container {
-    display        : flex;
+    display: flex;
     flex-direction : column;
     justify-content: center;
     /* text-align     : center; */
 }
 
 .content {
-    display        : flex;
+    display: flex;
     /* flex-direction : column; */
-    flex           : 1 0 auto;
-    align-items    : center;
+    flex: 1 0 auto;
+    align-items: center;
     justify-content: center;
-    margin         : 50px auto;
-    width          : 100%;
-    /* max-width      : 800px; */
-    padding: 10px 5px 5px
-    ;
-
-    @media (--phone) {
-        margin-top: 0;
-    }
-
-    @media (--tablet) {
-        max-width: 660px;
-    }
+    margin: 50px auto;
+    width: 100%;
+    /* max-width: 800px; */
+    padding: 10px 5px 5px;
+    @media (--phone) {margin-top: 0;}
+    @media (--tablet) {max-width: 660px;}
 }
 
 hr {
-    width     : 100%;
-    border    : none;
+    width: 100%;
+    border: none;
     background: var(--light-border-color);
-    height    : 1px;
-
-    .dark & {
-        background: var(--dark-border-color);
-    }
+    height: 1px;
+    .dark & {background: var(--dark-border-color);}
 }
 
 .infoBanner {
-    text-align   : left;
-    margin       : 20px 0 40px;
-    padding      : 10px 20px;
+    text-align: left;
+    margin: 20px 0 40px;
+    padding: 10px 20px;
     border-radius: 10px;
-    width        : calc(100% - 40px);
-    background   : var(--light-background-secondary);
+    width: calc(100% - 40px);
+    background: var(--light-background-secondary);
 
-    .dark & {
-        background: var(--dark-background-secondary);
-    }
-
-    span {
-        font-weight: bold;
-    }
+    .dark & {background: var(--dark-background-secondary);}
+    span {font-weight: bold;}
 }
 
-.hidden {
-    display: none;
-}
+.hidden {display: none;}
 
 .embedVideo-container {
-    position      : relative;
+    position: relative;
     padding-bottom: 56.25%;
-    height        : 0;
-    overflow      : hidden;
-
-    iframe {
-        position: absolute;
-        top     : 0;
-        left    : 0;
-        width   : 100%;
-        height  : 100%;
-        border  : 0;
-    }
+    height: 0;
+    overflow: hidden;
+    iframe {position: absolute;top: 0;left: 0;width: 100%;height: 100%;border: 0;}
 }
 
-footer {
-    font-size    : 1rem;
-    text-align   : center;
-    margin-bottom: 50px;
-
-    @media (--phone) {
-        display       : flex;
-        flex-direction: column;
-    }
-
-    .footerCopyrights {
-        &:not(:first-of-type) {
-            margin-left : 20px;
-            padding-left: 20px;
-            border-left : 1px solid;
-
-            @media (--phone) {
-                margin : 0;
-                padding: 0;
-                border : none;
-            }
-        }
-    }
-}
-/* inset rgba(255, 255, 255, 0.25) 2px 5px 30px 7px, rgba(160, 137, 137, 0.22) -5px -5px 30px 7px */
 .sexy-card {
     width: 315px;
     height: 280px;
     border-radius: 14px;
     overflow: hidden;
     margin: 20px 10px;
-    box-shadow: 5px 5px 30px 7px rgba(0,0,0,0.25), -5px -5px 30px 7px rgba(0,0,0,0.22);
+    box-shadow: 0px 0px 14px 1px rgba(0,0,0,.25), 0px 0px 29px 0px rgba(0,0,0,.22);
     cursor: pointer;
     transform-origin: center;
     transition: filter 200ms linear, transform 200ms linear;
     position: relative;
+    .dark & {box-shadow: inset -11px 15px 30px 7px hsla(0,0%,100%,.25), 0 0 20px 0px rgba(160,137,137,.22);}
 }
 
 .sexy-card:hover {
