--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -3,207 +3,356 @@
 @import "./variables.css";
 @import "./prism.css";
 
-*,*:before,*:after {box-sizing: inherit;}
-a {text-decoration: none !important;}
-a:hover{text-decoration: none !important;}
-
-body {
-    margin: 0;
-    padding: 0;
-    font-family: 'Inter UI', -apple-system, BlinkMacSystemFont, "Roboto", "Segoe UI", Helvetica, Arial, sans-serif;
-    font-size: 1rem;
-    font-weight: 600;
-    line-height: 1.54;
-    background-color: var(--light-background);
-    color: var(--light-color);
-    text-rendering: optimizeLegibility;
-    -webkit-font-smoothing: antialiased;
-    font-feature-settings: "liga", "tnum", "case", "calt", "zero", "ss01", "locl";
-    -webkit-overflow-scrolling: touch;
-    -webkit-text-size-adjust: 100%;
-    transition: background-color 0.3s, color 0.3s;
-
-    @media (--phone) {font-size: 1rem;}
-
-    &.dark {
-        /* background-color: var(--dark-background); */
-        background: linear-gradient(rgba(130, 46, 96, 0.49) 0%, rgba(0, 0, 0, 0) 100%);
-        background-color: #292a2d;
-        color: var(--dark-color);
-    }
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
 }
 
-h1,h2,h3,h4,h5,h6 {display: flex; align-items: center;line-height: 1.3;}
-h1 {font-size: 2.625rem;}
-h2 {font-size: 1.625rem;}
-h3 {font-size: 1.375rem;}
-h4 {font-size: 1.125rem;}
-a {color: inherit;}
+a {
+  text-decoration: none !important;
+}
+
+a:hover {
+  text-decoration: none !important;
+}
+
+body {
+  margin                    : 0;
+  padding                   : 0;
+  font-family               : 'Inter UI', -apple-system, BlinkMacSystemFont, "Roboto", "Segoe UI", Helvetica, Arial, sans-serif;
+  font-size                 : 1rem;
+  font-weight               : 600;
+  line-height               : 1.54;
+  background-color          : var(--light-background);
+  color                     : var(--light-color);
+  text-rendering            : optimizeLegibility;
+  -webkit-font-smoothing    : antialiased;
+  font-feature-settings     : "liga", "tnum", "case", "calt", "zero", "ss01", "locl";
+  -webkit-overflow-scrolling: touch;
+  -webkit-text-size-adjust  : 100%;
+  transition                : background-color 0.3s, color 0.3s;
+
+  @media (--phone) {
+    font-size: 1rem;
+  }
+
+  &.dark {
+    background      : linear-gradient(rgba(130, 46, 96, 0.49) 0%, rgba(0, 0, 0, 0) 100%);
+    background-color: #292a2d;
+    color           : var(--dark-color);
+  }
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  display    : flex;
+  align-items: center;
+  line-height: 1.3;
+}
+
+h1 {
+  font-size: 2.625rem;
+}
+
+h2 {
+  font-size: 1.625rem;
+}
+
+h3 {
+  font-size: 1.375rem;
+}
+
+h4 {
+  font-size: 1.125rem;
+}
+
+a {
+  color: inherit;
+}
 
 @media (--phone) {
-    h1 {font-size: 2rem;}
-    h2 {font-size: 1.4rem;}
-    h3 {font-size: 1.15rem;}
-    h4 {font-size: 1.125rem;}
+  h1 {
+    font-size: 2rem;
+  }
+
+  h2 {
+    font-size: 1.4rem;
+  }
+
+  h3 {
+    font-size: 1.15rem;
+  }
+
+  h4 {
+    font-size: 1.125rem;
+  }
 }
 
 img {
-    display  : block;
-    max-width: 100%;
-    &.left {margin-right: auto;}
-    &.center {margin-left : auto;margin-right: auto;}
-    &.right {margin-left: auto;}
+  display  : block;
+  max-width: 100%;
+
+  &.left {
+    margin-right: auto;
+  }
+
+  &.center {
+    margin-left : auto;
+    margin-right: auto;
+  }
+
+  &.right {
+    margin-left: auto;
+  }
 }
 
 figure {
-    display  : table;
-    max-width: 100%;
-    margin   : 25px 0;
-    &.left {margin-right: auto;}
-    &.center {margin-left : auto;margin-right: auto;}
-    &.right {margin-left: auto;}
+  display  : table;
+  max-width: 100%;
+  margin   : 25px 0;
 
-    figcaption {
-        font-size : 14px;
-        margin-top: 5px;
-        opacity   : .8;
-        &.left {text-align: left;}
-        &.center {text-align: center;}
-        &.right {text-align: right;}
+  &.left {
+    margin-right: auto;
+  }
+
+  &.center {
+    margin-left : auto;
+    margin-right: auto;
+  }
+
+  &.right {
+    margin-left: auto;
+  }
+
+  figcaption {
+    font-size : 14px;
+    margin-top: 5px;
+    opacity   : .8;
+
+    &.left {
+      text-align: left;
     }
+
+    &.center {
+      text-align: center;
+    }
+
+    &.right {
+      text-align: right;
+    }
+  }
 }
 
 code {
-    font-family: Consolas, Monaco, Andale Mono, Ubuntu Mono, monospace;
-    font-feature-settings: normal;
-    font-weight: normal;
-    background: var(--light-background-secondary);
-    padding: 1px 6px;
-    margin: 0 2px;
-    border-radius: 5px;
-    font-size: .9rem;
+  font-family          : Consolas, Monaco, Andale Mono, Ubuntu Mono, monospace;
+  font-feature-settings: normal;
+  font-weight          : normal;
+  background           : var(--light-background-secondary);
+  padding              : 1px 6px;
+  margin               : 0 2px;
+  border-radius        : 5px;
+  font-size            : .9rem;
 
-    .dark & {background: var(--dark-background-secondary);}
+  .dark & {
+    background: var(--dark-background-secondary);
+  }
 }
 
 pre {
-    background: #1a1a1d;
-    padding: 20px;
-    border-radius: 8px;
-    font-size: .9rem;
-    overflow: auto;
-    @media (--phone) {white-space: pre-wrap;word-wrap  : break-word;}
-    code {background: none !important;color: #ccc;margin: 0;padding: 0;font-size: .9rem;}
+  background   : #1a1a1d;
+  padding      : 20px;
+  border-radius: 8px;
+  font-size    : .9rem;
+  overflow     : auto;
+
+  @media (--phone) {
+    white-space: pre-wrap;
+    word-wrap  : break-word;
+  }
+
+  code {
+    background: none !important;
+    color     : #ccc;
+    margin    : 0;
+    padding   : 0;
+    font-size : .9rem;
+  }
 }
 
 blockquote {
-    border-left: 2px solid;
-    margin: 40px;
-    padding: 10px 20px;
-    @media (--phone) {margin : 10px;padding: 10px;}
-    p:first-of-type {margin-top: 0;}
-    p:last-of-type {margin-bottom: 0;}
+  border-left: 2px solid;
+  margin     : 40px;
+  padding    : 10px 20px;
+
+  @media (--phone) {
+    margin : 10px;
+    padding: 10px;
+  }
+
+  p:first-of-type {
+    margin-top: 0;
+  }
+
+  p:last-of-type {
+    margin-bottom: 0;
+  }
 }
 
-table {table-layout: fixed;border-collapse: collapse;width: 100%;margin: 40px 0;border-radius: 5px;}
+table {
+  table-layout   : fixed;
+  border-collapse: collapse;
+  width          : 100%;
+  margin         : 40px 0;
+  border-radius  : 5px;
+}
 
-table,th,td {
-    border : 1px solid var(--light-color);
-    padding: 10px;
-    .dark & {border-color: var(--dark-color);}
+table,
+th,
+td {
+  border : 1px solid var(--light-color);
+  padding: 10px;
+
+  .dark & {
+    border-color: var(--dark-color);
+  }
 }
 
 th {
-    background: var(--light-background-secondary);
-    .dark & {background: var(--dark-background-secondary);}
+  background: var(--light-background-secondary);
+
+  .dark & {
+    background: var(--dark-background-secondary);
+  }
 }
 
-ul,ol {
-    margin-left: 40px;
-    padding    : 0;
-    @media (--phone) {margin-left: 20px;}
+ul,
+ol {
+  margin-left: 40px;
+  padding    : 0;
+
+  @media (--phone) {
+    margin-left: 20px;
+  }
 }
 
-ol ol {list-style-type: lower-alpha;}
+ol ol {
+  list-style-type: lower-alpha;
+}
 
-button,input,textarea {
-    font-family: 'Inter UI', -apple-system, BlinkMacSystemFont, "Roboto", "Segoe UI", Helvetica, Arial, sans-serif;
+button,
+input,
+textarea {
+  font-family: 'Inter UI', -apple-system, BlinkMacSystemFont, "Roboto", "Segoe UI", Helvetica, Arial, sans-serif;
 }
 
 .container {
-    display: flex;
-    flex-direction : column;
-    justify-content: center;
-    /* text-align     : center; */
+  display           : flex;
+  flex-direction    : column;
+  justify-content   : center;
+  /* text-align     : center; */
 }
 
 .content {
-    display: flex;
-    /* flex-direction : column; */
-    flex: 1 0 auto;
-    align-items: center;
-    justify-content: center;
-    margin: 50px auto;
-    width: 100%;
-    /* max-width: 800px; */
-    padding: 10px 5px 5px;
-    @media (--phone) {margin-top: 0;}
-    @media (--tablet) {max-width: 660px;}
+  display           : flex;
+  flex              : 1 0 auto;
+  align-items       : center;
+  justify-content   : center;
+  margin            : 50px auto;
+  width             : 100%;
+  padding           : 10px 5px 5px;
+
+  @media (--phone) {
+    margin-top: 0;
+  }
+
+  @media (--tablet) {
+    max-width: 660px;
+  }
 }
 
 hr {
-    width: 100%;
-    border: none;
-    background: var(--light-border-color);
-    height: 1px;
-    .dark & {background: var(--dark-border-color);}
+  width     : 100%;
+  border    : none;
+  background: var(--light-border-color);
+  height    : 1px;
+
+  .dark & {
+    background: var(--dark-border-color);
+  }
 }
 
 .infoBanner {
-    text-align: left;
-    margin: 20px 0 40px;
-    padding: 10px 20px;
-    border-radius: 10px;
-    width: calc(100% - 40px);
-    background: var(--light-background-secondary);
+  text-align   : left;
+  margin       : 20px 0 40px;
+  padding      : 10px 20px;
+  border-radius: 10px;
+  width        : calc(100% - 40px);
+  background   : var(--light-background-secondary);
 
-    .dark & {background: var(--dark-background-secondary);}
-    span {font-weight: bold;}
+  .dark & {
+    background: var(--dark-background-secondary);
+  }
+
+  span {
+    font-weight: bold;
+  }
 }
 
-.hidden {display: none;}
+.hidden {
+  display: none;
+}
 
 .embedVideo-container {
-    position: relative;
-    padding-bottom: 56.25%;
-    height: 0;
-    overflow: hidden;
-    iframe {position: absolute;top: 0;left: 0;width: 100%;height: 100%;border: 0;}
+  position      : relative;
+  padding-bottom: 56.25%;
+  height        : 0;
+  overflow      : hidden;
+
+  iframe {
+    position: absolute;
+    top     : 0;
+    left    : 0;
+    width   : 100%;
+    height  : 100%;
+    border  : 0;
+  }
 }
 
 footer {
-    font-size    : 1rem;
-    text-align   : center;
-    margin-bottom: 50px;
-    @media (--phone) {display: flex;flex-direction: column;}
+  font-size    : 1rem;
+  text-align   : center;
+  margin-bottom: 50px;
+
+  @media (--phone) {
+    display       : flex;
+    flex-direction: column;
+  }
 }
 
 .sexy-card {
-    width: 315px;
-    height: 280px;
-    border-radius: 14px;
-    overflow: hidden;
-    margin: 20px 10px;
-    box-shadow: 0px 0px 14px 1px rgba(0,0,0,.25), 0px 0px 29px 0px rgba(0,0,0,.22);
-    cursor: pointer;
-    transform-origin: center;
-    transition: filter 200ms linear, transform 200ms linear;
-    position: relative;
-    .dark & {box-shadow: inset -11px 15px 30px 7px hsla(0,0%,100%,.25), 0 0 20px 0px rgba(160,137,137,.22);}
+  width           : 315px;
+  height          : 280px;
+  border-radius   : 14px;
+  overflow        : hidden;
+  margin          : 20px 10px;
+  box-shadow      : 0px 0px 14px 1px rgba(0, 0, 0, .25), 0px 0px 29px 0px rgba(0, 0, 0, .22);
+  cursor          : pointer;
+  transform-origin: center;
+  transition      : filter 200ms linear, transform 200ms linear;
+  position        : relative;
+
+  .dark & {
+    box-shadow: inset -11px 15px 30px 7px hsla(0,0%,100%,.25), 0 0 15px 0 rgba(160,137,137,.22)
+  }
 }
 
 .sexy-card:hover {
-    transform: scale(1.05) translateZ(0);
-    transform-origin: center;
-    transition: filter 200ms linear, transform 200ms linear;
+  transform       : scale(1.05) translateZ(0);
+  transform-origin: center;
+  transition      : filter 200ms linear, transform 200ms linear;
 }
