--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -25,6 +25,8 @@ body {
   font-weight               : 600;
   line-height               : 1.54;
   background-color          : var(--light-background);
+  background-repeat: no-repeat;
+  background-attachment: fixed;
   color                     : var(--light-color);
   text-rendering            : optimizeLegibility;
   -webkit-font-smoothing    : antialiased;
@@ -38,7 +40,7 @@ body {
   }
 
   &.dark {
-    background      : linear-gradient(rgba(130, 46, 96, 0.49) 0%, rgba(0, 0, 0, 0) 100%);
+    /* background      : linear-gradient(rgba(130, 46, 96, 0.49) 0%, rgba(0, 0, 0, 0) 100%); */
     background-color: #292a2d;
     color           : var(--dark-color);
   }
