--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,11 +1,25 @@
-html,
-body,
-#___gatsby {
+*, html, body {
+  box-sizing: border-box;
+}
+
+html {
   height: 100%;
 }
 
 body {
-  margin: 0px;
+  height: 100%;
+  margin: 0;
+}
+
+.layout {
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
+}
+
+.content {
+  flex-grow: 1;
+  padding: 20px;
 }
 
 div[role="group"][tabindex] {
