--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -223,6 +223,11 @@ th {
   }
 }
 
+table td, th {
+  word-wrap: break-word;         /* All browsers since IE 5.5+ */
+  overflow-wrap: break-word;     /* Renamed property in CSS3 draft spec */
+}
+
 ul,
 ol {
   margin-left: 40px;
@@ -313,5 +318,69 @@ hr {
     width   : 100%;
     height  : 100%;
     border  : 0;
+  }
+}
+
+
+.anchor {
+  margin-top: -3.9em;
+  padding-top: 3.9em;
+}
+.anchor .extension {
+  align-items: center;
+  display: flex;
+  padding: 0.4em 0.2em;
+}
+.anchor .extension .header-anchor {
+  font-size: 1.2em;
+}
+.anchor .extension:hover .header-anchor {
+  opacity: 1;
+}
+.anchor .extension img {
+  margin-right: 0.5em;
+}
+.anchor .extension .extension-text {
+  flex: 1;
+}
+.anchor .extension .extension-text .down {
+  color: #6c757d;
+  font-family: monospace;
+  font-size: 0.8rem;
+}
+/* .anchor .extension .button {
+  background-color: #fe5186;
+  border-bottom: 1px solid #fe5186;
+  border-radius: 4px;
+  box-sizing: border-box;
+  color: #fff;
+  display: inline-block;
+  font-size: 0.8em;
+  padding: 0.5rem;
+  text-transform: uppercase;
+  transition: background-color 0.1s ease;
+  border: none;
+  cursor: pointer;
+} */
+/* .anchor .extension .button:hover {
+  background-color: #fc3b75;
+  text-decoration: none !important;
+} */
+.anchor .extension .button .material-holder {
+  color: #fff;
+}
+.anchor .extension .button .material-holder + span {
+  margin-left: 0.25rem;
+}
+.anchor .extension:not(:last-child) {
+  border-bottom: 1px solid #fd9dcc85;
+}
+.anchor .extension:target .extension {
+  background: #f1f8ff;
+}
+@media (max-width: 767px) {
+  .anchor .extension .extension-text .down,
+  .anchor .extension .button span {
+    display: none;
   }
 }
