--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -2,240 +2,252 @@
 @import '../../node_modules/bootstrap/dist/css/bootstrap-grid.min.css';
 @import "./fonts.css";
 @import "./prism.css";
-a {
-    text-decoration: none !important;
-}
 
-a:hover {
+a {
+  text-decoration: none !important;
+
+  &:hover {
     text-decoration: none !important;
+  }
 }
 
 body {
-    font-family: 'Inter UI', -apple-system, BlinkMacSystemFont, "Roboto", "Segoe UI", Helvetica, Arial, sans-serif;
+  font-family: 'Inter UI', -apple-system, BlinkMacSystemFont, "Roboto", "Segoe UI", Helvetica, Arial, sans-serif;
+  font-size: 1rem;
+  font-weight: 600;
+  line-height: 1.54;
+  background-color: var(--light-background);
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  color: var(--light-color);
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  font-feature-settings: "liga", "tnum", "case", "calt", "zero", "ss01", "locl";
+  -webkit-overflow-scrolling: touch;
+  -webkit-text-size-adjust: 100%;
+  transition: background-color 0.2s, color 0.2s;
+
+  /* Prevent text selection */
+  user-select: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  -khtml-user-select: none;
+
+  @media (--phone) {
     font-size: 1rem;
-    font-weight: 600;
-    line-height: 1.54;
-    background-color: var(--light-background);
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    color: var(--light-color);
-    text-rendering: optimizeLegibility;
-    -webkit-font-smoothing: antialiased;
-    font-feature-settings: "liga", "tnum", "case", "calt", "zero", "ss01", "locl";
-    -webkit-overflow-scrolling: touch;
-    -webkit-text-size-adjust: 100%;
-    transition: background-color 0.2s, color 0.2s;
-    @media (--phone) {
-        font-size: 1rem;
-    }
-    &.dark {
-        background-color: #292a2d;
-        color: var(--dark-color);
-    }
+  }
+
+  &.dark {
+    background-color: #292a2d;
+    color: var(--dark-color);
+  }
 }
 
 h1 {
-    font-size: 2.625rem;
+  font-size: 2.625rem;
 }
 
 h2 {
-    font-size: 1.625rem;
+  font-size: 1.625rem;
 }
 
 h3 {
-    font-size: 1.375rem;
+  font-size: 1.375rem;
 }
 
 h4 {
-    font-size: 1.125rem;
+  font-size: 1.125rem;
 }
 
 a {
-    color: inherit;
+  color: inherit;
 }
 
 @media (--phone) {
-    h1 {
-        font-size: 2rem;
-    }
-    h2 {
-        font-size: 1.4rem;
-    }
-    h3 {
-        font-size: 1.15rem;
-    }
-    h4 {
-        font-size: 1.125rem;
-    }
+  h1 {
+    font-size: 2rem;
+  }
+  h2 {
+    font-size: 1.4rem;
+  }
+  h3 {
+    font-size: 1.15rem;
+  }
+  h4 {
+    font-size: 1.125rem;
+  }
 }
 
 img {
-    display: block;
-    max-width: 100%;
-    &.left {
-        margin-right: auto;
-    }
-    &.center {
-        margin-left: auto;
-        margin-right: auto;
-    }
-    &.right {
-        margin-left: auto;
-    }
+  display: block;
+  max-width: 100%;
+  &.left {
+      margin-right: auto;
+  }
+  &.center {
+      margin-left: auto;
+      margin-right: auto;
+  }
+  &.right {
+      margin-left: auto;
+  }
 }
 
 figure {
-    display: table;
-    max-width: 100%;
-    margin: 25px 0;
+  display: table;
+  max-width: 100%;
+  margin: 25px 0;
+  &.left {
+    margin-right: auto;
+  }
+  &.center {
+    margin-left: auto;
+    margin-right: auto;
+  }
+  &.right {
+    margin-left: auto;
+  }
+  figcaption {
+    font-size: 14px;
+    margin-top: 5px;
+    opacity: .8;
     &.left {
-        margin-right: auto;
+      text-align: left;
     }
     &.center {
-        margin-left: auto;
-        margin-right: auto;
+      text-align: center;
     }
     &.right {
-        margin-left: auto;
+      text-align: right;
     }
-    figcaption {
-        font-size: 14px;
-        margin-top: 5px;
-        opacity: .8;
-        &.left {
-            text-align: left;
-        }
-        &.center {
-            text-align: center;
-        }
-        &.right {
-            text-align: right;
-        }
-    }
+  }
 }
 
 code {
-    font-family: Consolas, Monaco, Andale Mono, Ubuntu Mono, monospace;
-    font-feature-settings: normal;
-    font-weight: normal;
-    background: var(--light-background-secondary);
-    padding: 1px 6px;
-    margin: 0 2px;
-    border-radius: 5px;
-    font-size: .9rem;
-    .dark & {
-        background: var(--dark-background-secondary);
-    }
+  font-family: Consolas, Monaco, Andale Mono, Ubuntu Mono, monospace;
+  font-feature-settings: normal;
+  font-weight: normal;
+  background: var(--light-background-secondary);
+  padding: 1px 6px;
+  margin: 0 2px;
+  border-radius: 5px;
+  font-size: .9rem;
+
+  .dark & {
+    background: var(--dark-background-secondary);
+  }
 }
 
 pre {
-    background: #1a1a1d;
-    padding: 20px;
-    border-radius: 8px;
+  background: #1a1a1d;
+  padding: 20px;
+  border-radius: 8px;
+  font-size: .9rem;
+  overflow: auto;
+  @media (--phone) {
+    white-space: pre-wrap;
+    word-wrap: break-word;
+  }
+  code {
+    background: none !important;
+    color: #ccc;
+    margin: 0;
+    padding: 0;
     font-size: .9rem;
-    overflow: auto;
-    @media (--phone) {
-        white-space: pre-wrap;
-        word-wrap: break-word;
-    }
-    code {
-        background: none !important;
-        color: #ccc;
-        margin: 0;
-        padding: 0;
-        font-size: .9rem;
-    }
+  }
 }
 
 blockquote {
-    border-left: 2px solid;
-    margin: 40px;
-    padding: 10px 20px;
-    @media (--phone) {
-        margin: 10px;
-        padding: 10px;
-    }
-    p:first-of-type {
-        margin-top: 0;
-    }
-    p:last-of-type {
-        margin-bottom: 0;
-    }
+  border-left: 2px solid;
+  margin: 40px;
+  padding: 10px 20px;
+  @media (--phone) {
+    margin: 10px;
+    padding: 10px;
+  }
+  p:first-of-type {
+    margin-top: 0;
+  }
+  p:last-of-type {
+    margin-bottom: 0;
+  }
 }
 
 table {
-    table-layout: fixed;
-    border-collapse: collapse;
-    width: 100%;
-    margin: 40px 0;
-    border-radius: 5px;
+  table-layout: fixed;
+  border-collapse: collapse;
+  width: 100%;
+  margin: 40px 0;
+  border-radius: 5px;
 }
 
 table,
 th,
 td {
-    border: 1px solid var(--light-color);
-    padding: 10px;
-    .dark & {
-        border-color: var(--dark-color);
-    }
+  border: 1px solid var(--light-color);
+  padding: 10px;
+
+  .dark & {
+    border-color: var(--dark-color);
+  }
 }
 
 th {
-    background: var(--light-background-secondary);
-    .dark & {
-        background: var(--dark-background-secondary);
-    }
+  background: var(--light-background-secondary);
+  .dark & {
+    background: var(--dark-background-secondary);
+  }
 }
 
 table td,
 th {
-    word-wrap: break-word;
-    /* All browsers since IE 5.5+ */
-    overflow-wrap: break-word;
-    /* Renamed property in CSS3 draft spec */
+  word-wrap: break-word;
+  /* All browsers since IE 5.5+ */
+  overflow-wrap: break-word;
+  /* Renamed property in CSS3 draft spec */
 }
 
 ul,
 ol {
-    margin-left: 40px;
-    padding: 0;
-    @media (--phone) {
-        margin-left: 20px;
-    }
+  margin-left: 40px;
+  padding: 0;
+  @media (--phone) {
+    margin-left: 20px;
+  }
 }
 
 ol ol {
-    list-style-type: lower-alpha;
+  list-style-type: lower-alpha;
 }
 
 button,
 input,
 textarea {
-    font-family: 'Inter UI', -apple-system, BlinkMacSystemFont, "Roboto", "Segoe UI", Helvetica, Arial, sans-serif;
+  font-family: 'Inter UI', -apple-system, BlinkMacSystemFont, "Roboto", "Segoe UI", Helvetica, Arial, sans-serif;
 }
 
 .container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    /* text-align     : center; */
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  /* text-align: center; */
 }
 
 .content {
-    display: flex;
-    flex: 1 0 auto;
-    align-items: center;
-    justify-content: center;
-    margin: 50px auto;
-    width: 100%;
-    padding: 10px 5px 5px;
-    @media (--phone) {
-        margin-top: 0;
-    }
-    @media (--tablet) {
-        max-width: 660px;
-    }
+  display: flex;
+  flex: 1 0 auto;
+  align-items: center;
+  justify-content: center;
+  margin: 50px auto;
+  width: 100%;
+  padding: 10px 5px 5px;
+  @media (--phone) {
+    margin-top: 0;
+  }
+  @media (--tablet) {
+    max-width: 660px;
+  }
 }
 
 hr {
@@ -244,96 +256,96 @@ hr {
     background: var(--light-border-color);
     height: 1px;
     .dark & {
-        background: var(--dark-border-color);
+      background: var(--dark-border-color);
     }
 }
 
 .infoBanner {
-    text-align: left;
-    margin: 20px 0 40px;
-    padding: 10px 20px;
-    border-radius: 10px;
-    width: calc(100% - 40px);
-    background: var(--light-background-secondary);
-    .dark & {
-        background: var(--dark-background-secondary);
-    }
-    span {
-        font-weight: bold;
-    }
+  text-align: left;
+  margin: 20px 0 40px;
+  padding: 10px 20px;
+  border-radius: 10px;
+  width: calc(100% - 40px);
+  background: var(--light-background-secondary);
+  .dark & {
+    background: var(--dark-background-secondary);
+  }
+  span {
+    font-weight: bold;
+  }
 }
 
 .hidden {
-    display: none;
+  display: none;
 }
 
 .embedVideo-container {
-    position: relative;
-    padding-bottom: 56.25%;
-    height: 0;
-    overflow: hidden;
-    iframe {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        border: 0;
-    }
+  position: relative;
+  padding-bottom: 56.25%;
+  height: 0;
+  overflow: hidden;
+  iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border: 0;
+  }
 }
 
 .anchor {
-    margin-top: -3.9em;
-    padding-top: 3.9em;
+  margin-top: -3.9em;
+  padding-top: 3.9em;
 }
 
 .anchor .extension {
-    align-items: center;
-    display: flex;
-    padding: 0.4em 0.2em;
+  align-items: center;
+  display: flex;
+  padding: 0.4em 0.2em;
 }
 
 .anchor .extension .header-anchor {
-    font-size: 1.2em;
+  font-size: 1.2em;
 }
 
 .anchor .extension:hover .header-anchor {
-    opacity: 1;
+  opacity: 1;
 }
 
 .anchor .extension img {
-    margin-right: 0.5em;
+  margin-right: 0.5em;
 }
 
 .anchor .extension .extension-text {
-    flex: 1;
+  flex: 1;
 }
 
 .anchor .extension .extension-text .down {
-    color: #6c757d;
-    font-family: monospace;
-    font-size: 0.8rem;
+  color: #6c757d;
+  font-family: monospace;
+  font-size: 0.8rem;
 }
 
 .anchor .extension .button .material-holder {
-    color: #fff;
+  color: #fff;
 }
 
 .anchor .extension .button .material-holder+span {
-    margin-left: 0.25rem;
+  margin-left: 0.25rem;
 }
 
 .anchor .extension:not(:last-child) {
-    border-bottom: 1px solid #fd9dcc85;
+  border-bottom: 1px solid #fd9dcc85;
 }
 
 .anchor .extension:target .extension {
-    background: #f1f8ff;
+  background: #f1f8ff;
 }
 
 @media (max-width: 767px) {
-    .anchor .extension .extension-text .down,
-    .anchor .extension .button span {
-        display: none;
-    }
+  .anchor .extension .extension-text .down,
+  .anchor .extension .button span {
+    display: none;
+  }
 }
